--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -11,4 +11,6 @@
   <p>
     If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
   </p>
+  <input type="text" full [(ngModel)]="param1" />
+  <button ion-button full (click)="isBlank(param1)"> IS BLANK </button>
 </ion-content>
